--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
         <div class="container">
-          <p class="copyright_text">Copyright 2022 All Right Reserved By.<a href="https://html.design"> Free  html Templates</a></p>
+          <p class="copyright_text">Test</p>
         </div>
       </div>
       <!-- copyright section end -->
